pkg/front_end/testcases/patterns/issue51739.dart.strong.transformed.expect
library /*isNonNullableByDefault*/;
//
// Problems in library:
//
// pkg/front_end/testcases/patterns/issue51739.dart:7:19: Error: Variable pattern 'x' doesn't have the same type or finality in all cases.
//   if (q case (var x! || String x)) {
//                   ^
//
import self as self;
import "dart:core" as core;

static method method() → dynamic {
  core::int? q = (2 as{ForNonNullableByDefault} dynamic) as{TypeError,ForDynamic,ForNonNullableByDefault} core::int?;
  {
    hoisted invalid-type x;
    final synthesized core::int? #0#0 = q;
    if((let final core::int? #t1 = #0#0! in let final core::int? #t2 = x = #0#0! in true) || #0#0 is{ForNonNullableByDefault} core::String && (let final core::int? #t3 = x = #0#0 in true)) {
      core::print(x);
      core::print(core::_GrowableList::_literal1<dynamic>(x).{core::Object::runtimeType}{core::Type});
    }
  }
}


Extra constant evaluation status:
Evaluated: AsExpression @ org-dartlang-testcase:///issue51739.dart:6:8 -> IntConstant(2)
Extra constant evaluation: evaluated: 22, effectively constant: 1
